--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6 text-center div-padding-fix mb-4">
           <i class="fa fa-4x fa-graduation-cap text-faded sr-icons"></i>
           <h3 class="text-white">Graduation</h3>
-          <p class="text-faded">(Expected )Graduated in August 2022</p>
+          <p class="text-faded">(Expected)Graduated on November 2022</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
