Mengubah website pribadi

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
           <i class="fa fa-4x fa-id-card-o text-faded sr-icons"></i>
           <h3 class="text-white">Degree</h3>
-          <p class="text-faded">Bachelor of Science in Computer Science from<br/>
+          <p class="text-faded">Bachelor of Computer Science from<br/>
           <a class="text-white-link" href="https://telkomuniversity.ac.id/" class="text-blue">Telkom University</a></p>
         </div>
 
@@ -116,17 +116,17 @@
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
           <i class="fa fa-4x fa-code text-faded sr-icons"></i>
-          <h3 class="text-white">Languages</h3>
-          <p class="text-faded no-margin">Python, C++</p>
-          <p class="text-faded">[HTML5 (HTML/CSS/JS)]</p>
+          <h3 class="text-white">Languages/Framework</h3>
+          <p class="text-faded no-margin">Python, C++, HTML, CSS, PHP</p>
+          <p class="text-faded">Bootstrap, Jquery, Laravel</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
           <i class="fa fa-4x fa-file-code-o text-faded sr-icons"></i>
           <h3 class="text-white">Skills</h3>
-					<p class="text-faded">(Still Learning)</p>
-          <p class="text-faded no-margin">(Will be Added Soon)</p>
-          <p class="text-faded">(Will be Added Soon)</p>
+	  <p class="text-faded">Data Science</p>
+          <p class="text-faded no-margin">Data Visualization</p>
+          <p class="text-faded">Machine Learning</p>
         </div>
       </div>
 
@@ -143,7 +143,7 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading" id="work">Work</h2>
+          <h2 class="section-heading" id="work">Experience</h2>
           <hr class="divider my-4" />
         </div>
 	      <div class="col-sm-12 text-center mt-4 mb-4">
@@ -188,8 +188,8 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading" id="githubb">
-            <a class="text-white-link" href="#">
-						  https://github.com/Otniel113/Libreria-di-Ricette-Apps
+            <a class="text-white-link" href="https://github.com/Otniel113?tab=repositories">
+						  My Github Repository
               <i class="fa fa-1x fa-github-square" style="color:white"></i>
             </a>
           </h2>
@@ -315,14 +315,14 @@
           <a href="#">
             <i class="fa fa-linkedin-square fa-4x sr-icons"></i>
           </a>
-          <p><a href="#" class="text-blue">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/otniel-abiezer/" class="text-blue">LinkedIn</a></p>
         </div>
         
         <div class="col-4 col-sm-4 col-lg-2 text-center">
           <a href="#">
             <i class="fa fa-github-square fa-4x sr-icons"></i>
           </a>
-          <p><a href="#" class="text-blue">GitHub</a></p>
+          <p><a href="https://www.github.com/Otniel113" class="text-blue">GitHub</a></p>
         </div>
       </div>
     </div>
