Update experience dan certificate

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Otniel113</title>
+  <title>Otniel Abiezer Website</title>
 
 
   <script src="https://use.fontawesome.com/4dfd1d7bab.js"></script>
@@ -43,7 +43,7 @@
     <div class="container">
 
       <!-- Updated with latest Creative -->
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Otniel113 Website</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Otniel Abiezer Website</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" 
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
@@ -88,8 +88,8 @@
           <hr class="divider my-4" />
         </div>
         <div class="col-lg-8 mx-auto">
-          <p class="text-faded text-black mb-5">CS Students who like learn new things</p>
-          <p class="text-italic font-weight-bold mb-5">Telkom University Student</a></p>
+          <p class="text-faded text-black mb-5">I like learn new things inside and outside of my major</p>
+          <p class="text-italic font-weight-bold mb-5">Graduated from Telkom University</a></p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
         </div>
       </div>
@@ -116,7 +116,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6 text-center div-padding-fix mb-4">
           <i class="fa fa-4x fa-graduation-cap text-faded sr-icons"></i>
           <h3 class="text-white">Graduation</h3>
-          <p class="text-faded">(Expected)Graduated on November 2022</p>
+          <p class="text-faded">Graduated on November 2022</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
@@ -137,7 +137,7 @@
         <div class="col-lg-12 col-md-12 col-sm-12 text-center mb-4">
           <i class="fa fa-4x fa-github text-faded sr-icons"></i>
           <h3 class="text-white">More Information</h3>
-	        <p class="text-faded">To see full information about my languages/frameworks/libraries, you can go to:</br>
+	        <p class="text-faded">To see full information about my frameworks, libraries, and so on, you can go to:</br>
             <a class="text-white-link" href="https://github.com/Otniel113/" class="text-blue">My Github Profile</a></p>
 
         </div>
@@ -160,24 +160,24 @@
           <h2 class="section-heading" id="work">Experience</h2>
           <hr class="divider my-4" />
         </div>
-	      <div class="col-sm-12 text-center mt-4 mb-4">
+	      <!-- <div class="col-sm-12 text-center mt-4 mb-4">
           <i class="fa fa-4x fa-rocket text-primary sr-icons"></i>
           <h3 class="mt-4 mb-4">
             Project-Based Intern: Data Scientist Virtual Internship Experience
           </h3>
           <p class="text-muted">May-2022 to June-2022: <span class="RtnRed">ID/X Partners</span></p>
+        </div> -->
+        <div class="col-lg-6 col-sm-6 text-center">
+          <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
+          <h3 class="mt-4 mb-4">Research Assistant</h3>
+          <p class="text-muted">July 2022 to September 2022: Telkom University</p>
+        </div>
+        <div class="col-lg-6 col-sm-6 text-center">
+          <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
+          <h3 class="mt-4 mb-4">Project-Based Intern: Data Scientist Virtual Internship Experience</h3>
+          <p class="text-muted">May-2022 to June-2022: ID/X Partners</p>
         </div>
         <!-- <div class="col-lg-3 col-sm-6 text-center">
-          <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">[Past Experience]</h3>
-          <p class="text-muted">[Month year] to [Month year]: [Location]</p>
-        </div>
-        <div class="col-lg-3 col-sm-6 text-center">
-          <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">[Past Experience/Activity]</h3>
-          <p class="text-muted">[Month year] to [Month year]: [Location]</p>
-        </div>
-        <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-android text-primary sr-icons"></i>
           <i class="fa fa-4x fa-server text-primary sr-icons ml-4"></i>
           <h3 class="mt-4 mb-4">Technical Intern</h3>
@@ -258,12 +258,12 @@
 
         <!-- Fourth Link -->
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://github.com/Otniel113/FuzzyLogic_in_Python">
+          <a class="portfolio-box" href="https://github.com/Otniel113/Credit_Risk">
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">FuzzyLogic_in_Python</div>
-                <div class="project-name">Implementasi mencari restoran terbaik berdasarkan nilai/rating pelayanan dan makanan</div>
+                <div class="project-category text-faded">Credit_Risk</div>
+                <div class="project-name">Tugas akhir program Virtual Internship Experience (VIX) dari Rakamin Academy dengan ID/X Partners batch Mei 2022 untuk prediksi credit risk.</div>
               </div>
             </div>
           </a>
@@ -284,12 +284,12 @@
 
         <!-- Sixth Link  -->
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://github.com/Otniel113/PrediksiBeasiswa">
+          <a class="portfolio-box" href="https://github.com/Otniel113/Jankenpon-Deploy">
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">PrediksiBeasiswa</div>
-                <div class="project-name">Memprediksi mahasiswa pantas mendapatkan beasiswa berdasarkan nilai masuk dan juga IPK</div>
+                <div class="project-category text-faded">Jankenpon-Deploy</div>
+                <div class="project-name">Prediksi gambar dari bentuk tangan gunting, batu, atau kertas. Kemudian diadu dengan hasil suit dari komputer.</div>
               </div>
             </div>
           </a>
@@ -375,12 +375,12 @@
 
         <!-- Fifth Link -->
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="#">
+          <a class="portfolio-box" href="https://github.com/Otniel113/OnlineRetail">
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Coming Soon</div>
-                <div class="project-name">Still coming soon</div>
+                <div class="project-category text-faded">BMKG-Vis</div>
+                <div class="project-name">Visualisasi data interaktif dengan library Bokeh dan deploy ke Heroku menggunakan Data Online BMKG</div>
               </div>
             </div>
           </a>
@@ -437,12 +437,12 @@
 
         <!-- Second Link -->
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="#">
+          <a class="portfolio-box" href="https://github.com/Otniel113/RentACar-Mobile">
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">RentACar-Mobile</div>
-                <div class="project-name">Aplikasi booking mobil untuk wisata menggunakan Flutter (coming soon)</div>
+                <div class="project-name">Aplikasi booking mobil untuk wisata menggunakan Flutter</div>
               </div>
             </div>
           </a>
@@ -464,12 +464,12 @@
 
         <!-- Fourth Link -->
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="#">
+          <a class="portfolio-box" href="https://github.com/Otniel113/IoT_Pernafasan">
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">HebubanCommunity</div>
-                <div class="project-name">Pencarian dan identifikasi komunitas pada topik game Heaven Burns Red (coming soon)</div>
+                <div class="project-category text-faded">IoT_Pernafasan</div>
+                <div class="project-name">Tugas UTS mata kuliah IoT (Internet of Things) dengan melakukan pengukuran pernafasan menggunakan Phyphox</div>
               </div>
             </div>
           </a>
@@ -490,12 +490,12 @@
 
         <!-- Sixth Link  -->
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://github.com/Otniel113/Jankenpon-CV3">
+          <a class="portfolio-box" href="https://github.com/Otniel113/PadovanSequence_DP">
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Jankenpon-CV3</div>
-                <div class="project-name">Klasifikasi gambar gunting, batu, kertas menggunakan deep learning Convolutional Neural Network (CNN)</div>
+                <div class="project-category text-faded">PadovanSequence_DP</div>
+                <div class="project-name">Membandingkan kompleksitas waktu Padovan Sequence secara Rekursif dan Dynamic Programming (DP)</div>
               </div>
             </div>
           </a>
@@ -587,6 +587,22 @@
           <a class="text-white-link" href="https://progate.com/course_certificate/dfd00581qoi5eo" class="text-blue">Credential</a>
         </div>
 
+        <div class="col-lg-6 col-md-6 col-sm-6 text-center div-padding-fix mb-4">
+          <i class="fa fa-4x fa-user-md text-faded sr-icons"></i>
+          <h3 class="text-white">Dirjen Dikti, Ristek Kemendikbudristek</h3>
+          <p class="text-faded">Microcredential Certification Associate Data Scientist</p>
+          <p class="text-faded">December 2021</p>
+          <a class="text-white-link" href="https://drive.google.com/file/d/1HpBtTatj9EwyFUwKRU59Oq8A5sy3uIHj/view?usp=sharing" class="text-blue">Credential</a>
+        </div>
+
+        <div class="col-lg-6 col-md-6 col-sm-6 text-center div-padding-fix mb-4">
+          <i class="fa fa-4x fa-fighter-jet text-faded sr-icons"></i>
+          <h3 class="text-white">IC2IE Committee</h3>
+          <p class="text-faded">Certificate of Presenter</p>
+          <p class="text-faded">September 2022</p>
+          <a class="text-white-link" href="https://drive.google.com/file/d/17UOsrHke_hY-dHRlVnpD4cAEn2BAgryn/view?usp=sharing" class="text-blue">Credential</a>
+        </div>
+
       </div>
 
       <div class="row">
@@ -618,14 +634,14 @@
         </div>
         
         <div class="col-4 col-sm-4 col-lg-2 text-center">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/otniel-abiezer/">
             <i class="fa fa-linkedin-square fa-4x sr-icons"></i>
           </a>
           <p><a href="https://www.linkedin.com/in/otniel-abiezer/" class="text-blue">LinkedIn</a></p>
         </div>
         
         <div class="col-4 col-sm-4 col-lg-2 text-center">
-          <a href="#">
+          <a href="https://www.github.com/Otniel113">
             <i class="fa fa-github-square fa-4x sr-icons"></i>
           </a>
           <p><a href="https://www.github.com/Otniel113" class="text-blue">GitHub</a></p>
