Minor Revision about My Major

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
         <div class="col-lg-8 mx-auto">
           <p class="text-faded text-black mb-5">
-            I like Mathematics since I was a kid and take Computer Science Major 
+            I like Mathematics since I was a kid and take Informatics Major 
             because it also can be called as "Applied Mathematics". I enjoy learning about data, analyzing it, and making people understand it as well. 
             I am a detailed person, love numbers and data, and also like learning new various things inside or outside of my major. 
           </p>
