Mengoptimisasi tampilan mobile

--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
           <ul type="disc">
             <li>
               O. Abiezer., F. Nhita and I. Kurniawan, 
-              <a href="https://ieeexplore.ieee.org/document/9970035">"Identification of Lung Cancer in Smoker Person Using Ensemble Methods Based on Gene Expression Data"</a>, <br>
+              <a href="https://ieeexplore.ieee.org/document/9970035">"Identification of Lung Cancer in Smoker Person Using Ensemble Methods Based on Gene Expression Data"</a>,
               2022 5th International Conference of Computer and Informatics Engineering (IC2IE), Jakarta, Indonesia, 2022, pp. 89-93, doi: 10.1109/IC2IE56416.2022.9970035.
             </li>
           </ul>
@@ -920,14 +920,14 @@
       </div>
 
       <div class="row">
-        <div class="col-3 col-sm-3 col-lg-3 offset-lg-3 text-center">
+        <div class="col-6 col-sm-6 col-lg-3 offset-lg-3 text-center">
           <a href="https://ismankrn.staff.telkomuniversity.ac.id/">
             <i class="fa fa-users fa-4x sr-icons"></i>
           </a>
           <p><a href="https://ismankrn.staff.telkomuniversity.ac.id/" class="text-blue">IKN Research Group</a></p>
         </div>
 
-        <div class="col-3 col-sm-3 col-lg-3 text-center">
+        <div class="col-6 col-sm-6 col-lg-3 text-center">
           <a href="https://www.petakebijakan.com/">
             <i class="fa fa-balance-scale fa-4x sr-icons"></i>
           </a>
@@ -944,7 +944,7 @@
       </div>
 
       <div class="row">
-        <div class="col-2 col-sm-2 col-lg-2 offset-lg-3 text-center">
+        <div class="col-4 col-sm-4 col-lg-2 offset-lg-3 text-center">
 				  <a href="img/resume.pdf">
 						<i class="fa fa-envelope fa-4x sr-icons"></i>
 					</a>
@@ -953,14 +953,14 @@
 					</a>
         </div>
         
-        <div class="col-2 col-sm-2 col-lg-2 text-center">
+        <div class="col-4 col-sm-4 col-lg-2 text-center">
           <a href="https://www.linkedin.com/in/otniel-abiezer/">
             <i class="fa fa-linkedin-square fa-4x sr-icons"></i>
           </a>
           <p><a href="https://www.linkedin.com/in/otniel-abiezer/" class="text-blue">LinkedIn</a></p>
         </div>
         
-        <div class="col-2 col-sm-2 col-lg-2 text-center">
+        <div class="col-4 col-sm-4 col-lg-2 text-center">
           <a href="https://www.github.com/Otniel113">
             <i class="fa fa-github-square fa-4x sr-icons"></i>
           </a>
