--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
     <div class="container my-auto">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h1 class="text-uppercase">
+          <h1 class="text-uppercase text-white">
             <strong>Otniel Abiezer</strong>
           </h1>
           <hr class="divider my-4" />
         </div>
         <div class="col-lg-8 mx-auto">
-          <p class="text-faded text-black mb-5">
+          <p class="text-faded text-white mb-5">
             I like Mathematics since I was a kid and take Informatics Major 
             because it also can be called as "Applied Mathematics". I enjoy learning about data, analyzing it, and making people understand it as well. 
             I am a detailed person, love numbers and data, and also like learning new various things inside or outside of my major. 
           </p>
-          <p class="text-italic font-weight-bold mb-5">
+          <p class="text-italic text-white font-weight-bold mb-5">
             Area of Expertise: Data Science and Data Analytics <br>
             (including Machine Learning, Data Visualization, and so on)</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
