Mengganti logo, 404, dan menambah deployment

--- a/index.html
+++ b/index.html
@@ -140,14 +140,13 @@
 	        <p class="text-faded">Data Science</p>
           <p class="text-faded no-margin">Software Development (Web & Mobile)</p>
           <p class="text-faded">Database Programming & Modelling</p>
-          <p class="text-faded">API Integration</p>
         </div>
 
         <div class="col-lg-12 col-md-12 col-sm-12 text-center mb-4">
           <i class="fa fa-4x fa-github text-faded sr-icons"></i>
           <h3 class="text-white">More Information</h3>
 	        <p class="text-faded">To see full information about my frameworks, libraries, and so on, you can go to:</br>
-            <a class="text-white-link" href="https://github.com/Otniel113/" class="text-blue">My Github Profile</a></p>
+            <a class="text-white-link" href="https://github.com/Otniel113/" class="text-blue">My GitHub Profile</a></p>
 
         </div>
 
@@ -214,7 +213,7 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading" id="githubb">
             <a class="text-white">
-						  My Top 6 Projects on Github
+						  My Top 6 Projects on GitHub
               <i class="fa fa-1x fa-github-square" style="color:white"></i>
             </a>
           </h2>
@@ -326,42 +325,6 @@
       <div class="row no-gutters">
 
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://otniel113.github.io/WR-Classic-Calculator/">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Deployed on Github Pages</div>
-                <div class="project-name">WR-Classic-Calculator</div>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://otniel113.github.io/VN-Producer-Network/">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Deployed on Github Pages</div>
-                <div class="project-name">VN-Producer-Network</div>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://otniel113.github.io/VN-Universes/">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Deployed on Github Pages</div>
-                <div class="project-name">VN-Universes</div>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://chatgpt-integration.netlify.app/">            
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
             <div class="portfolio-box-caption">
@@ -374,12 +337,48 @@
         </div>
 
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="#deployment">
+          <a class="portfolio-box" href="https://otnielabiezer.com/VN-Producer-Network/">
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Coming Soon</div>
-                <div class="project-name">Still Coming Soon</div>
+                <div class="project-category text-faded">Deployed on Github Pages</div>
+                <div class="project-name">VN-Producer-Network</div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="https://otnielabiezer.com/VN-Universes/">
+            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="portfolio-box-caption-content">
+                <div class="project-category text-faded">Deployed on Github Pages</div>
+                <div class="project-name">VN-Universes</div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="https://otnielabiezer.com/GaussEasterAlgorithm/">
+            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="portfolio-box-caption-content">
+                <div class="project-category text-faded">Deployed on Github Pages</div>
+                <div class="project-name">GaussEasterAlgorithm</div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="https://otnielabiezer.com/WR-Classic-Calculator/">
+            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="portfolio-box-caption-content">
+                <div class="project-category text-faded">Deployed on Github Pages</div>
+                <div class="project-name">WR-Classic-Calculator</div>
               </div>
             </div>
           </a>
