--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ permalink: /404.html
   <meta charset="utf-8">
 
   <!-- Custom Title Bar -->
-  <title>4 o 4</title>
+  <title>404 - Not Found</title>
 
   <!-- Configuration -->
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -32,12 +32,14 @@ permalink: /404.html
     <div class="container">
 		<figure>
 		  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-			<img src="img/sad-marshmello.jpg" class="img-fluid" alt="sad face">
+			<img src="img/404-pict.jpg" class="img-fluid" alt="sad face">
 		  </a>
 		  <figcaption class="text-center">
-		  <span class="font-weight-bold">404 - This page doesn't exist... ¯\_(ツ)_/¯</span> <br/>
-		  <a href="https://otnielabiezer.com">Try going home?<a> <br/>
-		  [or click the image for a <span class="font-italic">happier</span> video]</figcaption>
+        <span class="font-weight-bold">404 - This page doesn't exist... ¯\_(ツ)_/¯</span> <br/>
+        Are you lost?
+        <a href="https://otnielabiezer.com">Back to home<a> <br/>
+        Or click the image to go somewhere else.
+      </figcaption>
 		</figure>
     </div>
   </body>
