--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <i class="fa fa-4x fa-id-card-o text-faded sr-icons"></i>
           <h3 class="text-white">Degree</h3>
           <p class="text-faded">Bachelor of Informatics from<br/>
-          <a class="text-white-link" href="https://telkomuniversity.ac.id/" class="text-blue">Telkom University</a></p>
+          <a class="text-white-link" href="https://telkomuniversity.ac.id/en/" class="text-blue">Telkom University</a></p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center div-padding-fix mb-4">
@@ -325,12 +325,12 @@
       <div class="row no-gutters">
 
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://chatgpt-integration.netlify.app/">            
+          <a class="portfolio-box" href="https://otnielabiezer.com/MVPCalculator/">
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Deployed on Netlify</div>
-                <div class="project-name">ChatGPT-API-Integration</div>
+                <div class="project-category text-faded">Deployed on Github Pages</div>
+                <div class="project-name">MVPCalculator</div>
               </div>
             </div>
           </a>
@@ -361,6 +361,18 @@
         </div>
 
         <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="https://chatgpt-integration.netlify.app/">            
+            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="portfolio-box-caption-content">
+                <div class="project-category text-faded">Deployed on Netlify</div>
+                <div class="project-name">ChatGPT-API-Integration</div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://otnielabiezer.com/GaussEasterAlgorithm/">
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
             <div class="portfolio-box-caption">
@@ -379,18 +391,6 @@
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">Deployed on Github Pages</div>
                 <div class="project-name">WR-Classic-Calculator</div>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="#deployment">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Coming Soon</div>
-                <div class="project-name">Still Coming Soon</div>
               </div>
             </div>
           </a>
