Menambah Otniel Dashboard

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         </div>
 
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="#githubb">
+          <a class="portfolio-box" href="https://github.com/Otniel113/OtnielDashboard">
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
@@ -361,6 +361,18 @@
         </div>
 
         <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="https://otnieldashboard.up.railway.app/">
+            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="portfolio-box-caption-content">
+                <div class="project-category text-faded">Deployed on Railway</div>
+                <div class="project-name">OtnielDashboard</div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://chatgpt-integration.netlify.app/">            
             <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
             <div class="portfolio-box-caption">
@@ -379,18 +391,6 @@
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">Deployed on Github Pages</div>
                 <div class="project-name">GaussEasterAlgorithm</div>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://otnielabiezer.com/WR-Classic-Calculator/">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Deployed on Github Pages</div>
-                <div class="project-name">WR-Classic-Calculator</div>
               </div>
             </div>
           </a>
