--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@ permalink: /404.html
     <div class="container">
 		<figure>
 		  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-			<img src="img/404-pict.jpg" class="img-fluid" alt="sad face">
+			<img src="img/404-pict.jpg" class="img-fluid" alt="404 pict">
 		  </a>
 		  <figcaption class="text-center">
         <span class="font-weight-bold">404 - This page doesn't exist... ¯\_(ツ)_/¯</span> <br/>
