--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <h3 class="text-white">Skills</h3>
 	        <p class="text-faded">Data Science</p>
           <p class="text-faded no-margin">Software Development (Web & Mobile)</p>
-          <p class="text-faded">Database Programming & Modelling</p>
+          <p class="text-faded">Database, API, JSON</p>
         </div>
 
         <div class="col-lg-12 col-md-12 col-sm-12 text-center mb-4">
@@ -175,12 +175,17 @@
           </h3>
           <p class="text-muted">May-2022 to June-2022: <span class="RtnRed">ID/X Partners</span></p>
         </div> -->
-        <div class="col-lg-6 col-sm-6 text-center">
+        <div class="col-lg-4 col-sm-4 text-center">
+          <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
+          <h3 class="mt-4 mb-4">Data Scientist</h3>
+          <p class="text-muted">March 2023 to June 2023: Peta Kebijakan</p>
+        </div>
+        <div class="col-lg-4 col-sm-4 text-center">
           <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
           <h3 class="mt-4 mb-4">Research Assistant</h3>
           <p class="text-muted">July 2022 to September 2022: Telkom University</p>
         </div>
-        <div class="col-lg-6 col-sm-6 text-center">
+        <div class="col-lg-4 col-sm-4 text-center">
           <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
           <h3 class="mt-4 mb-4">Project-Based Intern: Data Scientist Virtual Internship Experience</h3>
           <p class="text-muted">May-2022 to June-2022: ID/X Partners</p>
@@ -212,22 +217,28 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading" id="githubb">
-            <a class="text-white">
+            <div class="text-white">
 						  My Top 6 Projects on GitHub
               <i class="fa fa-1x fa-github-square" style="color:white"></i>
-            </a>
+            </div>
           </h2>
 					<hr class="divider light my-4" />
+          <h3 style="font-size: 16px;">
+            <div class="text-white">
+              These are my (or with my team) top open-source projects on GitHub. I (or we) also have accomplished some projects not listed below which are not open-source.
+            </div>
+          </h3>
         </div>
       </div>
     </div>
 
-    <div class="container-fluid p-0"> 
+    <div class="container-fluid p-0">
+      
       <div class="row no-gutters">
-
+        
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://github.com/Otniel113/MVPCalculator-Regresi">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project.jpg" alt="">
+            <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/top6.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">Top 6</div>
@@ -239,7 +250,7 @@
 
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://github.com/Otniel113/VN-Producer-Influencer">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project.jpg" alt="">
+            <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/top5.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">Top 5</div>
@@ -251,7 +262,7 @@
 
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://github.com/Otniel113/RentACar">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project.jpg" alt="">
+            <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/top4.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">Top 4</div>
@@ -264,7 +275,7 @@
 
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://github.com/Otniel113/OtnielDashboard">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project.jpg" alt="">
+            <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/top3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">Top 3</div>
@@ -276,7 +287,7 @@
 
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://github.com/Otniel113/DecisionTree">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project.jpg" alt="">
+            <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/top2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">Top 2</div>
@@ -288,7 +299,7 @@
 
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://github.com/Otniel113/LungCancerIdentification">            
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/project.jpg" alt="">
+            <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/top1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">Top 1</div>
@@ -318,18 +329,36 @@
           <h2 class="section-heading text-white" id="deployment">Deployment</h2>
 					<hr class="divider light my-4" />
         </div>
+        <h3 style="font-size: 16px;">
+          <div class="text-white text-center">
+            You can see some of my (or our) deployments on online website.
+          </div>
+        </h3>
       </div>
     </div>
 
     <div class="container-fluid p-0"> 
       <div class="row no-gutters">
 
+
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://otnielabiezer.com/MVPCalculator/">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
+          <a class="portfolio-box" href="https://petakebijakan.com">
+            <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/petakebijakan.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Deployed on Github Pages</div>
+                <!-- <div class="project-category text-faded">Deployed on Github Pages</div> -->
+                <div class="project-name">Peta Kebijakan</div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="https://otnielabiezer.com/MVPCalculator/">
+            <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/mvpcalculator.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="portfolio-box-caption-content">
+                <!-- <div class="project-category text-faded">Deployed on Github Pages</div> -->
                 <div class="project-name">MVPCalculator</div>
               </div>
             </div>
@@ -338,59 +367,48 @@
 
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://otnielabiezer.com/VN-Producer-Network/">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
+            <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/vn-producer-network.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Deployed on Github Pages</div>
+                <!-- <div class="project-category text-faded">Deployed on Github Pages</div> -->
                 <div class="project-name">VN-Producer-Network</div>
               </div>
             </div>
           </a>
         </div>
 
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://otnielabiezer.com/VN-Universes/">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Deployed on Github Pages</div>
-                <div class="project-name">VN-Universes</div>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://otnieldashboard.up.railway.app/">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Deployed on Railway</div>
-                <div class="project-name">OtnielDashboard</div>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://chatgpt-integration.netlify.app/">            
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Deployed on Netlify</div>
-                <div class="project-name">ChatGPT-API-Integration</div>
-              </div>
-            </div>
-          </a>
-        </div>
 
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://otnielabiezer.com/GaussEasterAlgorithm/">
-            <img class="img-responsive" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
+            <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/gauss.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">Deployed on Github Pages</div>
+                <!-- <div class="project-category text-faded">Deployed on Github Pages</div> -->
                 <div class="project-name">GaussEasterAlgorithm</div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="#">
+            <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="portfolio-box-caption-content">
+                <!-- <div class="project-category text-faded">Deployed on Railway</div> -->
+                <div class="project-name">Coming Soon</div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="#">            
+            <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="portfolio-box-caption-content">
+                <!-- <div class="project-category text-faded">Deployed on Netlify</div> -->
+                <div class="project-name">Coming Soon</div>
               </div>
             </div>
           </a>
@@ -522,7 +540,7 @@
     <p class="text-center text-muted text-small">
       Source on <a href="https://github.com/adf-telkomuniv/WGTIK_2021" class="text-blue">GitHub</a>.
       Theme based on the
-      <a href="http://startbootstrap.com/template-overviews/creative/" class="text-blue">Creative Bootstrap Theme</a>
+      <a href="https://startbootstrap.com/theme/creative" class="text-blue">Creative Bootstrap Theme</a>
       by <a href="http://startbootstrap.com/" class="text-blue">Start Bootstrap</a>.
     </p>
 		<br/>
